--- a/mmopy_server/tsconfig.json
+++ b/mmopy_server/tsconfig.json
@@ -11,7 +11,7 @@
         "baseUrl": ".",
         "paths": {
             "*": [
-                "node_modules/*",
+                "../node_modules/*",
                 "src/types/*"
             ]
         },
