--- a/mmopy_core/tsconfig.json
+++ b/mmopy_core/tsconfig.json
@@ -6,6 +6,7 @@
         "noImplicitAny": true,
         "sourceMap": true,
         "outDir": "dist",
+        "baseUrl": ".",
         "paths": {
             "*": [
                 "../node_modules/*"
