--- a/mmopy_core/tsconfig.json
+++ b/mmopy_core/tsconfig.json
@@ -4,6 +4,7 @@
         "esModuleInterop": true,
         "target": "es6",
         "noImplicitAny": true,
+        "strict": true,
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
