--- a/mmopy_server/tsconfig.json
+++ b/mmopy_server/tsconfig.json
@@ -7,7 +7,7 @@
         "moduleResolution": "node",
         "sourceMap": true,
         "rootDir": "src",
-        "outDir": "dist",
+        "outDir": "build",
         "baseUrl": ".",
         "paths": {
             "*": [
