--- a/mmopy_client/package.json
+++ b/mmopy_client/package.json
@@ -5,19 +5,21 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts-ts": "3.1.0"
+    "ts-loader": "^5.3.1"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "build": "webpack -p --display-modules --mode=production",
+    "watch": "webpack --watch --mode=development",
+    "start": "webpack-dev-server -d --content-base ./public"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.10",
     "@types/node": "^10.12.12",
     "@types/react": "^16.7.13",
     "@types/react-dom": "^16.0.11",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "webpack": "^4.27.1",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-cli": "^3.1.2",
+    "html-webpack-plugin": "^3.2.0"
   }
 }
