--- a/package.json
+++ b/package.json
@@ -1,8 +1,33 @@
 {
-    "private": true,
-    "workspaces": [
-        "mmopy_client",
-        "mmopy_core",
-        "mmopy_server"
-    ]
+  "name": "mmopy_bird",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/server/index.js",
+  "repository": "src",
+  "scripts": {
+    "start": "concurrently \"npm:watch-*\"",
+    "watch-client": "webpack --watch --mode=development",
+    "watch-server": "nodemon src/server/index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "concurrently": "^4.1.0",
+    "express": "^4.16.4",
+    "lodash": "^4.17.11",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-loader": "^8.0.0-beta.6",
+    "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.9",
+    "webpack": "^4.28.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.11",
+    "copy-webpack-plugin": "^4.6.0"
+  }
 }
